--- a/Trivia/Trivia.vcxproj.filters
+++ b/Trivia/Trivia.vcxproj.filters
@@ -119,5 +119,8 @@
     <ClCompile Include="StatisticsManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MenuRequestHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
